Quartz sync: Nov 7, 2024, 1:24 PM

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -7,6 +7,8 @@ html {
   text-size-adjust: none;
   overflow-x: hidden;
   width: 100vw;
+  scrollbar-color: var(--scrollbarColor) var(--scrollbarBackground);
+  scrollbar-width: thin;
 }
 
 body,
